fix(card-institution): corrected margin spacing issue

--- a/prol_educa_app/src/app/components/card-instituicao/card-instituicao.component.scss
+++ b/prol_educa_app/src/app/components/card-instituicao/card-instituicao.component.scss
@@ -23,14 +23,13 @@
   font-size: 18px;
   font-weight: 500;
   color: #333;
+
+  @media(max-width: 744px ){
+    margin-left: 26px;
+    font-size: 16px;
+  }
 }
 
 .card-content {
   padding-right: 5px;
-}
-
-@media (max-width: 576px) {
-  .titulo {
-    font-size: 14px;
-  }
 }
